testdata/cases/invalid/module_error.mjs

import "./modules/invalid_mod.js"

definition.session("helloworld", function(ctx) {
  ctx.get("/");
});
